work is going I'm gonna to the bathroom now just for few min

--- a/index.html
+++ b/index.html
@@ -12,17 +12,32 @@
     <header>
         <nav>
             <div class="log">
-                <img src="" alt="">
+                <img src="images/Logo.png" alt="">
 
 
             </div>
-            <div class="main-nav"></div>
+            <div class="main-nav">
+                <ul>
+                    <li><a href="#">Product</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#"> About</a></li>
+                    <li><a href="#">Login in</a></li>
+
+                </ul>
+            </div>
         </nav>
         <div class="hader-content">
-            <div class="text-content"></div>
+            <div class="text-content">
+                <h1>Save time by building  fast with Boldo Template</h1>
+                <p>Funding handshake buyer business-to-business metrics iPad partnership. First mover advantage innovator success deployment non-disclosure.</p>
+                <a href="#">Buy template</a>
+                <a href="#">Explore</a>
+            </div>
             <div class="image-content"></div>
         </div>
-        <div class="icon-sec"></div>
+        <div class="icon-sec">
+            
+        </div>
 
     </header>
 </body>
