I'm gonna to bathroom

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
@@ -12,7 +15,7 @@
     <header>
         <nav>
             <div class="log">
-                <img src="images/Logo.png" alt="">
+                <a href=""><img src="images/Logo Shape.png" alt=""> Boldo</a>
 
 
             </div>
@@ -21,7 +24,7 @@
                     <li><a href="#">Product</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#"> About</a></li>
-                    <li><a href="#">Login in</a></li>
+                    <li><a href="#">Login ln</a></li>
 
                 </ul>
             </div>
@@ -33,10 +36,12 @@
                 <a href="#">Buy template</a>
                 <a href="#">Explore</a>
             </div>
-            <div class="image-content"></div>
+            <div class="image-content">
+                <img src="images/hero graphics.png" alt="">
+            </div>
         </div>
         <div class="icon-sec">
-            
+
         </div>
 
     </header>
