work in process

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="common">
             <div class="log">
                 <a href=""><img src="images/Logo Shape.png" alt=""> Boldo</a>
 
@@ -29,11 +29,11 @@
                 </ul>
             </div>
         </nav>
-        <div class="hader-content">
+        <div class="hader-content common">
             <div class="text-content">
                 <h1>Save time by building  fast with Boldo Template</h1>
                 <p>Funding handshake buyer business-to-business metrics iPad partnership. First mover advantage innovator success deployment non-disclosure.</p>
-                <a href="#">Buy template</a>
+                <a href="#" class="header-btn">Buy template</a>
                 <a href="#">Explore</a>
             </div>
             <div class="image-content">
