--- a/index.html
+++ b/index.html
@@ -33,14 +33,22 @@
             <div class="text-content">
                 <h1>Save time by building  fast with Boldo Template</h1>
                 <p>Funding handshake buyer business-to-business metrics iPad partnership. First mover advantage innovator success deployment non-disclosure.</p>
-                <a href="#" class="header-btn">Buy template</a>
-                <a href="#">Explore</a>
+                <a href="#" class="active-btn">Buy template</a>
+                <a href="#" class="header-btn">Explore</a>
             </div>
             <div class="image-content">
                 <img src="images/hero graphics.png" alt="">
             </div>
         </div>
         <div class="icon-sec">
+            <ul>
+                <li><a href=""><img src="images/icons/Logo Shape.png" alt="">Boldo</a></li>
+                <li><a href=""><img src="images/icons/Group 2.png" alt="">Presto</a></li>
+                <li><a href=""><img src="images/icons/Logo Shape.png" alt="">Boldo</a></li>
+                <li><a href=""><img src="images/icons/Group 2.png" alt="">Presto</a></li>
+                <li><a href=""><img src="images/icons/Logo Shape.png" alt="">Boldo</a></li>
+                <li><a href=""><img src="images/icons/Group 2.png" alt="">Presto</a></li>
+            </ul>
 
         </div>
 
