change somethings here

--- a/index.html
+++ b/index.html
@@ -57,7 +57,30 @@
 
     </header>
     <main>
-        <section>
+        <section class="our-services common">
+            <p class="main-p">Our Services</p>
+            <h1>Handshake infographic mass market <br> crowdfunding iteration.</h1>
+            <div class="home-post">
+                <div class="home-single">
+                    <img src="images/Rectangle 1270.png" alt="">
+                    <h3>Cool feature title</h3>
+                    <p>Learning curve network effects return on investment.</p>
+                    <a href="#"><p>Explore page</p> <img src="images/icons/arrow-right.png" alt=""> </a>
+                </div>
+                <div class="home-single">
+                    <img src="images/Rectangle 1270.png" alt="">
+                    <h3>Cool feature title</h3>
+                    <p>Learning curve network effects return on investment.</p>
+                    <a href="#"><p>Explore page</p> <img src="images/icons/arrow-right.png" alt=""> </a>
+                </div>
+                <div class="home-single">
+                    <img src="images/Rectangle 1270.png" alt="">
+                    <h3>Cool feature title</h3>
+                    <p>Learning curve network effects return on investment.</p>
+                    <a href="#"><p>Explore page</p><img src="images/icons/arrow-right.png" alt=""> </a>
+                </div>
+                
+            </div>
 
         </section>
     </main>
