work stop now at the time

--- a/index.html
+++ b/index.html
@@ -83,6 +83,33 @@
             </div>
 
         </section>
+        <section class="our-clients common">
+            <div class="single-client">
+                <div class="client-img">
+                    <img src="images/Group 216.png" alt="">
+                    
+                </div>
+                <div class="client-content">
+                    <h3>We connect our customers with the best, and help them keep up-and stay open.</h3>
+                    <div class="single-p">
+                        <img src="images/icons/Group 210.png" alt="">
+                        <p> We connect our customers with the best.</p>
+                    </div>
+                    <div class="single-p">
+                        <img src="images/icons/Group 210.png" alt="">
+                        <p>We connect our customers with the best.</p>
+                    </div>
+                    <div class="single-p">
+                        <img src="images/icons/Group 210.png" alt="">
+                        <p>We connect our customers with the best.</p>
+                    </div>
+                    
+
+                    <a href="#">Start now</a>
+                </div>
+            </div>
+
+        </section>
     </main>
 </body>
 </html>
