--- a/index.html
+++ b/index.html
@@ -136,6 +136,35 @@
             </div>
 
         </section>
+        <section>
+            <h2>An enterprise template to ramp <br> up your company website</h2>
+           <div class="main-slider">
+            <div class="slider">
+                <P>“Buyer buzz partner network disruptive non-disclosure agreement business”</P>
+                <div class="slider-content">
+                    <img src="images/Ellipse 4.png" alt="">
+                    <p>Albus Dumbledore</p>
+                    <p>Manager @ Howarts</p>
+                </div>
+            </div>
+            <div class="slider">
+                <P>“Buyer buzz partner network disruptive non-disclosure agreement business”</P>
+                <div class="slider-content">
+                    <img src="images/Ellipse 4.png" alt="">
+                    <p>Albus Dumbledore</p>
+                    <p>Manager @ Howarts</p>
+                </div>
+            </div>
+            <div class="slider">
+                <P>“Buyer buzz partner network disruptive non-disclosure agreement business”</P>
+                <div class="slider-content">
+                    <img src="images/Ellipse 4.png" alt="">
+                    <p>Albus Dumbledore</p>
+                    <p>Manager @ Howarts</p>
+                </div>
+            </div>
+           </div>
+        </section>
     </main>
 </body>
 </html>
