--- a/index.html
+++ b/index.html
@@ -136,9 +136,18 @@
             </div>
 
         </section>
-        <section>
-            <h2>An enterprise template to ramp <br> up your company website</h2>
-           <div class="main-slider">
+        <section class=" slide-sec ">
+            <div class="slide-box">
+                <div class="slide-heading"> <h2 class="common">An enterprise template to ramp <br> up your company website</h2></div>
+                <div class="slide-btn">
+                    <button class="btn-s"><img src="images/icons/arrow-left.png" alt=""></button>
+                    <button class="btn-s"><img src="images/icons/arrow-right-slide.png" alt=""></button>
+                   
+                </div>
+            </div>
+           
+
+           <div class="main-slider common">
             <div class="slider">
                 <P>“Buyer buzz partner network disruptive non-disclosure agreement business”</P>
                 <div class="slider-content">
@@ -147,7 +156,7 @@
                     <p>Manager @ Howarts</p>
                 </div>
             </div>
-            <div class="slider">
+            <div class="slider ">
                 <P>“Buyer buzz partner network disruptive non-disclosure agreement business”</P>
                 <div class="slider-content">
                     <img src="images/Ellipse 4.png" alt="">
