--- a/index.html
+++ b/index.html
@@ -137,8 +137,10 @@
 
         </section>
         <section class=" slide-sec ">
-            <div class="slide-box">
-                <div class="slide-heading"> <h2 class="common">An enterprise template to ramp <br> up your company website</h2></div>
+            <div class="slide-box common">
+                <div class="slide-heading"> 
+                    <h2>An enterprise template to ramp <br> up your company website</h2>
+                </div>
                 <div class="slide-btn">
                     <button class="btn-s"><img src="images/icons/arrow-left.png" alt=""></button>
                     <button class="btn-s"><img src="images/icons/arrow-right-slide.png" alt=""></button>
