working very well

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
            <div class="main-slider common">
             <div class="slider">
-                <P>“Buyer buzz partner network disruptive non-disclosure agreement business”</P>
+                <P  class="slider-text">“Buyer buzz partner network disruptive non-disclosure agreement business”</P>
                 <div class="slider-content">
                     <img src="images/Ellipse 4.png" alt="">
                     <p>Albus Dumbledore</p>
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="slider ">
-                <P>“Buyer buzz partner network disruptive non-disclosure agreement business”</P>
+                <P  class="slider-text">“Buyer buzz partner network disruptive non-disclosure agreement business”</P>
                 <div class="slider-content">
                     <img src="images/Ellipse 4.png" alt="">
                     <p>Albus Dumbledore</p>
@@ -167,11 +167,18 @@
                 </div>
             </div>
             <div class="slider">
-                <P>“Buyer buzz partner network disruptive non-disclosure agreement business”</P>
+                <P class="slider-text">“Buyer buzz partner network disruptive non-disclosure agreement business”</P>
                 <div class="slider-content">
-                    <img src="images/Ellipse 4.png" alt="">
-                    <p>Albus Dumbledore</p>
-                    <p>Manager @ Howarts</p>
+                    <div class="slider-content-imge">
+                        <img src="images/Ellipse 4.png" alt="">
+
+                    </div>
+                    <div class="slider-content-text">
+                        <p>Albus Dumbledore</p>
+                        <p>Manager @ Howarts</p>
+                    </div>
+                    
+
                 </div>
             </div>
            </div>
