working stop here

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
                     
                 </div>
-                <div class="client-img">
+                <div class="client-img next-img">
                     <img src="images/Group 281.png" alt="">
                     
                 </div>
@@ -183,7 +183,7 @@
             <div class="slider">
                 <P class="slider-text">“Buyer buzz partner network disruptive non-disclosure agreement business”</P>
                 <div class="slider-content">
-                    <div class="slider-content-imge">
+                    <div class="slider-content-img">
                         <img src="images/Ellipse 4.png" alt="">
 
                     </div>
@@ -196,6 +196,22 @@
                 </div>
             </div>
            </div>
+        </section>
+        <section class="next-customer">
+            <div class="img-area">
+                <img src="images/Image.png" alt="">
+
+            </div>
+            <div class="content-area">
+                <div class="simple-heading">
+                    <h2>We connect our customers <br> with the best, and help them <br> keep up-and stay open.</h2>
+
+                </div>
+                <div class="slider-area">
+
+                </div>
+            </div>
+
         </section>
     </main>
 </body>
