--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </div>
            </div>
         </section>
-        <section class="next-customer">
+        <section class="next-customer common">
             <div class="img-area">
                 <img src="images/Image.png" alt="">
 
