working procesing now

--- a/index.html
+++ b/index.html
@@ -208,6 +208,19 @@
 
                 </div>
                 <div class="slider-area">
+                    <div class="single-accordation">
+                        <p>We connect our customers with the best?</p>
+                        <img src="images/icons/Group 2100.png" alt="">
+                    </div>
+                    <div class="single-accordation">
+                        <p>We connect our customers with the best?</p>
+                        <img src="images/icons/Group 2100.png" alt="">
+                    </div>
+                    <div class="single-accordation">
+                        <p>We connect our customers with the best?</p>
+                        <img src="images/icons/Group 2100.png" alt="">
+                    </div>
+                    
 
                 </div>
             </div>
