--- a/index.html
+++ b/index.html
@@ -220,10 +220,15 @@
                         <p>We connect our customers with the best?</p>
                         <img src="images/icons/Group 2100.png" alt="">
                     </div>
-                    
+
 
                 </div>
             </div>
+
+        </section>
+        <section class="blog-posts">
+            <p>Our Blog</p>
+            <h2>Value proposition accelerator product <br> management venture</h2>
 
         </section>
     </main>
