Hello started work again

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
         </section>
         <section class="blog-posts">
-            <p>Our Blog</p>
+            <p class="blog-p">Our Blog</p>
             <h2>Value proposition accelerator product <br> management venture</h2>
 
         </section>
