--- a/index.html
+++ b/index.html
@@ -272,6 +272,15 @@
 
 
         </section>
+        <section class="mail-subscription common">
+            <h1>An enterprise template to ramp <br> up your company website</h1>
+            <div class="mail-box">
+                <input type="text" placeholder="Your email address">
+                <input type="submit" value="start now">
+            </div>
+
+
+        </section>
     </main>
 </body>
 </html>
