--- a/index.html
+++ b/index.html
@@ -282,5 +282,13 @@
 
         </section>
     </main>
+    <footer>
+        <div class="log2">
+                <a href=""><img src="images/Logo Shape.png" alt=""> Boldo</a> 
+        </div>
+        <div class="links">
+
+        </div>
+    </footer>
 </body>
 </html>
