--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
                     <a href="#"><p>Explore page</p> <img src="images/icons/arrow-right.png" alt=""> </a>
                 </div>
                 <div class="home-single">
-                    <img src="images/Rectangle 1270.png" alt="">
+                    <img src="images/Rectangle 1270 (11).png" alt="">
                     <h3>Cool feature title</h3>
                     <p>Learning curve network effects return on investment.</p>
                     <a href="#"><p>Explore page</p> <img src="images/icons/arrow-right.png" alt=""> </a>
                 </div>
                 <div class="home-single">
-                    <img src="images/Rectangle 1270.png" alt="">
+                    <img src="images/Rectangle 1270 (12).png" alt="">
                     <h3>Cool feature title</h3>
                     <p>Learning curve network effects return on investment.</p>
                     <a href="#"><p>Explore page</p><img src="images/icons/arrow-right.png" alt=""> </a>
