--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap" rel="stylesheet">
 <!-- slick slider css -->
+<!-- <link rel="stylesheet" href="css/slick-theme.css"> -->
+<!-- <link rel="stylesheet" href="css/slick-theme.scss"> -->
 <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
